fixed Nav visiblilty and Prices

--- a/src/styles/components/Prices.scss
+++ b/src/styles/components/Prices.scss
@@ -23,6 +23,7 @@ div.chakra-table__container.container.css-zipzvv {
 td.product.css-0,
 td.price.css-0 {
   padding: 15px 10px 15px 10px;
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 td.price.css-0 {
