--- a/src/styles/global/base.scss
+++ b/src/styles/global/base.scss
@@ -16,8 +16,7 @@ main {
   color: #4a4a4a;
   letter-spacing: 0.05em;
   line-height: 1.4;
-  font-weight: 500;
-  
+  font-weight: 500;  
 }
 
 #root {
@@ -29,7 +28,8 @@ main {
   width: fit-content;
   margin: 0;
   padding: 0;
-  // background-color: #fbfafa;
+  background-color: #fbfafa;
+
 }
 
 .up-button {
